--- a/main.html
+++ b/main.html
@@ -6,9 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+	<style>
+		table,thead,tr,th{
+			border: 1px;
+			background-color: blue;
+		}
+	</style>
 </head>
 <body>
     <!-- add table here -->
+	<table>
+		<thead>
+			<tr>
+				<th>NAME</th>
+				<th>KILLS</th>
+				<th>SAVED</th>
+				<th>DEATHS</th>
+				<th>REVIVES</th>
+				<th>WIN</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>Hackerman</th>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<th>Cool Doggo</th>
+				<td>13</td>
+				<td>4</td>
+				<td>8</td>
+				<td>7</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<th>Andrews</th>
+				<td>19</td>
+				<td>2</td>
+				<td>10</td>
+				<td>11</td>
+				<td>0</td>
+			</tr>
+			<tr>
+			    <th>Strawberry</th>
+				<td>2</td>
+				<td>9</td>
+				<td>3</td>
+				<td>5</td>
+				<td>1</td>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
